# asterios

./: .gitignore  .readthedocs.yml  .travis.yml  README.rst  base.json  doc_requirements.txt  requirements.txt  setup.cfg  setup.py  test_requirements.txt
asterios/: __init__.py  __main__.py  __version__.py  authorization.py  config.py  level.py  models.py  routes.py  schema.py  setup.py  views.py
asterios/config_loader/: __init__.py  actions.py  argument_parser.py  config_modifiers.py
asterios/models/: __init__.py  basemodel.py  errors.py  games.py  team_members.py  utils.py
asterios_games/: classic_game.py  initiation.py  laby.py
doc/: Makefile  add_custom_level.rst  api.rst  conf.py  index.rst  installation.rst  make.bat
doc/spec/: openapi.yml
sample/: compute.py
spec/: openapi.yml
tests/: test_functional.py  test_views.py
tests/data_test_functional/: levels_theme_1.py  levels_theme_2.py
tests/test_config_loader/: test_argument_parser.py
tests/test_models/: test_basemodel.py
