[metadata]
name = asterios
version = attr: asterios.__version__
url = https://github.com/Maillol/asterios
author = Vincent Maillol
author_email = vincent.maillol@gmail.com
description = Asterios escape game server
long_description = file: README.rst
keywords =
    Asterios
    escape
    game
    server
license = GPLv3
classifiers =
    Programming Language :: Python :: 3.8
    Topic :: Games/Entertainment :: Puzzle Games
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    aiohttp>=3.7
    aiohttp-security>=0.2
    aiohttp-pydantic>=1.7.1
    attrs>=17.4
    voluptuous>=0.10
    pyyaml>=3.12
    basicauth>=0.4

[options.extras_require]
test = pytest==6.1.2; cricri>=2.0

[options.packages.find]
exclude =
    tests
    sample

[options.entry_points]
asterios.level_set =
    initiation = asterios_games.initiation
    laby = asterios_games.laby
    classic_game = asterios_games.classic_game
